[package]
name = "kvs"
version = "0.1.0"
authors = ["linxy <l1nxy.zy@gmail.com>"]
edition = "2018"
description = "A key-value store"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = "1.0.1"
predicates = "1.0.4"
clap = "3.0.0-beta.1"

